// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-cJSrbW buqieP"
  >
    <div
      class="sc-gxMtzJ lfggeT"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-cJSrbW buqieP"
  >
    <div
      class="sc-gGBfsJ dhfbWb"
    >
      <div
        class="sc-fYxtnH fUHJEz"
      >
        Max column width:
        <input
          class="sc-tilXH czLuSL"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-jDwBTQ kIEWGB"
  >
    <div
      class="sc-kvZOFW jENozH"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-jDwBTQ kIEWGB"
  >
    <pre
      class="sc-ksYbfQ kUwpwP"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
